--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Facebook Chat Like in NodeJS</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
-        <script src="http://localhost:1337/nowjs/now.js"></script>
+        <script src="http://node.guillaume-dumoulin.fr/nowjs/now.js"></script>
         <link rel='stylesheet' href='style.css' type='text/css' media='screen' />
         <script>
             $(document).ready(function(){
