last update before show case

--- a/bleu.html
+++ b/bleu.html
@@ -22,9 +22,9 @@
         <div class="player" id="player2"></div>
       </div>
       <div class="scores">
-        <div class="score" id="score1">0</div>
-        <div class="score">-</div>
-        <div class="score" id="score2">0</div>
+        <div class="score" id="score1"></div>
+        <div class="score"></div>
+        <div class="score" id="score2"></div>
       </div>
       <div class="etat-leap" id="off"></div>
     </div>
